# ai-spider

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
SpiderGame/: .gitignore
SpiderGame/Assets/: BasicLighting.lighting
SpiderGame/Assets/Scenes/: TrainingScene.unity
SpiderGame/Assets/Settings/Build Profiles/: Windows Client.asset
SpiderGame/Assets/Settings/HDRPDefaultResources/: HDRenderPipelineGlobalSettings.asset
SpiderGame/Assets/SpiderGame/Materials/: Ground.mat  SpiderEye_Red.mat  SpiderFovea_Black.mat  SpiderLeg_Black.mat  SpiderTeeth_Grey.mat  Walls.mat
SpiderGame/Assets/SpiderGame/Prefabs/: Arena.prefab  Spider.prefab
SpiderGame/Assets/SpiderGame/Scenes/: Spider.unity
SpiderGame/Assets/SpiderGame/Scenes/Spider/: LightingData.asset
SpiderGame/Assets/SpiderGame/Scripts/: SpiderAgent.cs
SpiderGame/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
SpiderGame/UserSettings/: EditorUserSettings.asset  Search.settings
SpiderGame/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
SpiderGame/config/ppo/: Crawler-A.yaml  Spider-A0.yaml  Spider-A1.yaml
paper/markdown/: 01_Spider Leg Components.md
src/: __init__.py  main.py
src/uv/: __init__.py  git.py  setup.py  ui.py  usage.py
