[project]
name = "spider-game"
version = "0.0.1"
description = "Unity ML Agents powered spider game with reinforcement learning"
readme = "README.md"
requires-python = ">=3.10.1,<=3.10.12"
license = { text = "MIT" }
keywords = [
    "unity",
    "ml-agents",
    "reinforcement-learning",
    "game-ai",
    "pytorch",
    "cuda",
]
authors = [{ name = "3nigma" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich>=10.0.0",
    "colorama>=0.4.4",
    "click>=8.0.0",
    "GitPython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/p3nGu1nZz/ai-spider"
Documentation = "https://github.com/p3nGu1nZz/ai-spider/tree/main/docs"
Repository = "https://github.com/p3nGu1nZz/ai-spider"
Issues = "https://github.com/p3nGu1nZz/ai-spider/issues"
Changelog = "https://github.com/p3nGu1nZz/ai-spider/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/2xpqjDUkHD"

[project.scripts]
spider-game = "src.main:cli"
setup = "src.__init__:setup"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
